added the home page property

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "wager-project",
+  "homepage": "http://tobe0504.github.io/wager-project",
   "version": "0.1.0",
   "type": "module",
   "private": true,
